# ISV-NCP-Validation-Suite

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD-PARTY.txt  pyproject.toml  pyrightconfig.json
isvctl/: README.md  pyproject.toml
isvctl/configs/: aws-bm.yaml  aws-control-plane.yaml  aws-eks.yaml  aws-iam.yaml  aws-iso.yaml  aws-network.yaml  aws-vm.yaml  bare_metal-overrides.yaml  bare_metal.yaml  k8s-overrides.yaml  k8s.yaml  microk8s-overrides.yaml  microk8s.yaml  overrides.yaml  slurm-overrides.yaml  slurm.yaml
isvctl/configs/aws/: bm.yaml  control-plane.yaml  eks.yaml  image-registry.yaml
isvctl/configs/providers/: k3s.yaml  microk8s.yaml  minikube.yaml
isvctl/configs/providers/aws/: README.md  bare_metal.yaml  eks.yaml  network.yaml
isvctl/configs/providers/aws/config/: bare_metal.yaml  control-plane.yaml  eks.yaml  iam.yaml  image-registry.yaml  network.yaml  vm.yaml
isvctl/configs/providers/aws/scripts/: README.md
isvctl/configs/providers/common/: deploy_nim.py  ssh_utils.py  teardown_nim.py
isvctl/configs/providers/gcp/: network.yaml  vm.yaml
isvctl/configs/providers/my-isv/: README.md
isvctl/configs/providers/my-isv/config/: bare_metal.yaml  control-plane.yaml  iam.yaml  image-registry.yaml  network.yaml  vm.yaml
isvctl/configs/providers/my-isv/scripts/: README.md
isvctl/configs/stubs/aws/: README.md
isvctl/configs/stubs/aws/bare_metal/: describe_tags.py  teardown.py
isvctl/configs/stubs/aws/bm/: describe_instance.py  launch_instance.py  reboot_instance.py  reinstall_instance.py  teardown.py  verify_terminated.py
isvctl/configs/stubs/aws/common/: __init__.py  ec2.py  errors.py  vpc.py
isvctl/configs/stubs/aws/control-plane/: check_api.py  create_access_key.py  create_tenant.py  delete_access_key.py  delete_tenant.py  disable_access_key.py  get_tenant.py  list_tenants.py  test_access_key.py  verify_key_rejected.py
isvctl/configs/stubs/aws/eks/: setup.sh  teardown.sh
isvctl/configs/stubs/aws/iam/: create_user.py  delete_user.py  setup.sh  teardown.sh  test_credentials.py
isvctl/configs/stubs/aws/image-registry/: crud_install_config.py  launch_instance.py  setup.sh  teardown.py  teardown.sh  upload_image.py  verify_config_installable.py  verify_image_installed.py
isvctl/configs/stubs/aws/iso/: launch_instance.py  setup.sh  teardown.py  teardown.sh  upload_image.py
isvctl/configs/stubs/aws/network/: create_vpc.py  (+7 more)
isvctl/configs/stubs/bare_metal/: describe_tags.py  setup.sh  teardown.sh
isvctl/configs/stubs/gcp/: __init__.py
isvctl/configs/stubs/k8s/: setup.sh  setup_k3s.sh  setup_microk8s.sh  setup_minikube.sh  teardown.sh
isvctl/configs/stubs/microk8s/: setup.sh  teardown.sh
isvctl/configs/stubs/network/: sg_crud_test.py
isvctl/configs/stubs/slurm/: setup.sh  teardown.sh
isvctl/configs/suites/: README.md  bare_metal.yaml  control-plane.yaml  iam.yaml  image-registry.yaml  k8s.yaml  network.yaml  slurm.yaml  vm.yaml
isvctl/configs/templates/: README.md  iam.yaml  image-registry.yaml
isvctl/configs/tests/: README.md  bare_metal.yaml  image-registry.yaml  k8s.yaml  network.yaml  vm.yaml
isvctl/schemas/: command_output.schema.json  config.schema.json
isvctl/scripts/: check_schemas.py  yaml2json.py
isvctl/src/isvctl/: __init__.py  main.py  redaction.py  reporting.py
isvctl/src/isvctl/cleaner/: __init__.py  operations.py  runner.py
isvctl/src/isvctl/cli/: __init__.py  catalog.py  clean.py  common.py  deploy.py  docs.py  test.py
isvctl/src/isvctl/config/: __init__.py  merger.py  output_schemas.py  schema.py
isvctl/src/isvctl/orchestrator/: __init__.py  commands.py  context.py  loop.py  step_executor.py
isvctl/src/isvctl/remote/: __init__.py  archive.py  ssh.py  transfer.py
isvctl/tests/: __init__.py  test_cleaner_cli.py  test_cleaner_operations.py  test_cleaner_runner.py  test_cli_init.py  test_merger.py  test_orchestrator.py  test_orchestrator_loop.py  test_redaction.py  test_remote_archive.py  test_remote_ssh.py  test_remote_transfer.py  test_reporting.py  test_schema.py  test_stub_contracts.py  test_tee_writer.py  test_yaml2json.py
isvreporter/: README.md  pyproject.toml
isvreporter/src/isvreporter/: __init__.py  auth.py  client.py  config.py  junit_parser.py  main.py  platform.py  version.py
isvreporter/tests/: __init__.py  test_auth.py  test_bump_version.py  test_client.py  test_config.py  test_junit_parser.py  test_platform.py  test_version.py
isvtest/: Makefile  README.md  pyproject.toml  pyrightconfig.json
isvtest/src/isvtest/: __init__.py  catalog.py  main.py
isvtest/src/isvtest/config/: __init__.py  inventory.py  loader.py  settings.py
isvtest/src/isvtest/core/: discovery.py  k8s.py  logger.py  ngc.py  nvidia.py  runners.py  slurm.py  ssh.py  validation.py  workload.py
isvtest/src/isvtest/testing/: __init__.py  subtests.py
isvtest/src/isvtest/tests/: conftest.py  test_reframe.py  test_validations.py
isvtest/src/isvtest/utils/: __init__.py  checks.py  junit_subtests.py
isvtest/src/isvtest/validations/: __init__.py  bm_cuda.py  bm_driver.py  bm_gpu.py  cluster.py  example.py  generic.py  host.py  iam.py  instance.py  k8s_api_network_acl.py  k8s_cluster.py  k8s_conformance.py  k8s_control_plane_logs.py  k8s_gpu.py  k8s_gpu_operator.py  k8s_mig.py  k8s_nodes.py  k8s_scheduling.py  network.py  nim.py  reframe_cpu_info.py  reframe_gpu_memory.py  reframe_ib_check.py  slurm_gpu_allocation.py  slurm_job_submission.py  slurm_node_job_execution.py  slurm_partition.py  ssh.py
isvtest/src/isvtest/workloads/: __init__.py  k8s_nccl.py  k8s_nccl_multinode.py  k8s_nim.py  k8s_nim_helm.py  k8s_stress.py  reframe_nccl_local_test.py  reframe_nccl_tests.py  slurm_gpu_stress.py  slurm_nccl_multinode.py  slurm_sbatch.py
isvtest/tests/: conftest.py  test_discovery.py  test_inventory.py  test_k8s.py  test_k8s_api_network_acl.py  test_k8s_conformance.py  test_logger.py  test_main.py  test_network.py  test_settings.py  test_slurm.py  test_utils.py  test_validation.py
(+238 files in other folders)
