[project]
name = "isv-ncp-validation-suite"
version = "0.4.3"
description = "NVIDIA ISV NCP Validation Suite"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Alexandre Begnoche", email = "abegnoche@nvidia.com" },
    { name = "Pedro Marques da Luz", email = "daluz@nvidia.com" },
]
requires-python = ">=3.12"
dependencies = ["isvctl", "isvtest", "isvreporter"]

[project.scripts]
isvctl = "isvctl.main:app"
isvtest = "isvtest.main:main"
isvreporter = "isvreporter.main:main"

[tool.uv.sources]
isvctl = { workspace = true }
isvtest = { workspace = true }
isvreporter = { workspace = true }

[dependency-groups]
dev = [
    "coverage>=7.0.0",
]

[tool.uv.workspace]
members = ["isvctl", "isvtest", "isvreporter"]
