[project]
name = "isv-ncp-validation-suite"
version = "0.6.1"
description = "NVIDIA ISV NCP Validation Suite"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Alexandre Begnoche", email = "abegnoche@nvidia.com" },
    { name = "Pedro Marques da Luz", email = "daluz@nvidia.com" },
]
requires-python = ">=3.12"
dependencies = ["isvctl", "isvtest", "isvreporter"]

[tool.uv.sources]
isvctl = { workspace = true }
isvtest = { workspace = true }
isvreporter = { workspace = true }

[dependency-groups]
test = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.0.0",
]
lint = [
    "pre-commit>=4.0.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.uv.workspace]
members = ["isvctl", "isvtest", "isvreporter"]

# Pin transitive deps with known HIGH CVEs until upstream minimums catch up (Trivy / uv.lock).
[tool.uv]
override-dependencies = [
    "cryptography>=46.0.5",
    "pyasn1>=0.6.3",
    "requests>=2.32.5",
]
